# shot2mjpeg

./: CMakeLists.txt  config.c  config.h  configuration.conf  http_example_server.c  shot2jpeg.c  shot2jpeg.h  shot2mjpeg_server.c
